--- a/config/database.yml
+++ b/config/database.yml
@@ -80,5 +80,5 @@ test:
 production:
   <<: *default
   database: blog_production
-  username: blog
-  password: <%= ENV["BLOG_DATABASE_PASSWORD"] %>
+  username: deploy
+  password: <%= ENV["DATABASE_PASSWORD"] %>
